AIS data in - skipping no MMSI